# tutor-contrib-redis-ssl

./: .hatch_build.py  MANIFEST.in  Makefile  README.rst  pyproject.toml
tutorredis_ssl/: plugin.py
tutorredis_ssl/patches/: cms-env  config-defaults  lms-env  local-docker-compose-jobs-services  openedx-cms-common-settings  openedx-common-settings  openedx-lms-development-settings
tutorredis_ssl/patches/openedx-lms-common-settings/: celery-transport-override
tutorredis_ssl/templates/redis-ssl/apps/openedx/settings/partials/: common_all.py
